--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@portabletext/react": "^5.0.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
+    "@sanity/color-input": "^5.0.2",
+    "@sanity/image-url": "^2.0.2",
+    "@sanity/vision": "^4.20.3",
     "autoprefixer": "^10.4.22",
     "framer-motion": "^12.23.25",
     "maath": "^0.10.8",
     "next": "16.0.7",
+    "next-sanity": "^11.6.10",
     "postcss": "^8.5.6",
     "postprocessing": "^6.38.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-player": "^3.4.0",
+    "sanity": "^4.20.3",
     "three": "^0.181.2"
   },
   "devDependencies": {
